# solidus

./: .env.docker  .env.example  .env.prod.example  .gitignore  DOCKER_README.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  Makefile  Makefile.prod  diagnose.sh  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  docker-compose.yml.BAK  docker-entrypoint.dev.sh  docker-entrypoint.sh  manage.py  nginx.conf  pyproject.toml  requirements.txt.USE_UV  setup-dev.sh
config/nginx/: nginx.conf  nginx.prod.conf
docs/: NEXTSTEPS.md  ROADMAP.md
fixtures/: initial_data.json
frontend/: index.js  input.css  package-lock.json  package.json  tailwind.config.js
src/accounts/: admin.py  forms.py  models.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py
src/api/: urls.py  views.py
src/assets/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
src/assets/management/commands/: process_assets.py
src/assets/migrations/: 0001_initial.py
src/audit/: admin.py  middleware.py  mixins.py  models.py  signals.py  urls.py  views.py
src/audit/migrations/: 0001_initial.py
src/autocare/: apps.py
src/autocare/admin/: __init__.py  pcadb.py
src/autocare/forms/: pcadb.py
src/autocare/models/: __init__.py  pcadb.py
src/autocare/urls/: pcadb.py
src/autocare/views/: pcadb.py
src/autocare_pcadb/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/autocare_pcadb/management/commands/: import_pcadb_data.py
src/autocare_vcdb/: admin.py  api.py  api_urls.py  apps.py  checks.py  filters.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
src/autocare_vcdb/management/commands/: export_vcdb_data.py  import_vcdb_data.py  vcdb_stats.py
src/autocare_vcdb/templatetags/: vcdb_tags.py
src/core/: admin.py  consumers.py  context_processors.py  favicon.py  health.py  mixins.py  models.py  notifications.py  routing.py  simple_health.py  urls.py  views.py
src/core/management/commands/: autocare_import_categories.py  cleanup_old_audit_logs.py  create_dev_data.py  export_audit_log.py  generate_scheduled_feeds.py  generate_thumbnails.py  migrate_product_data.py  monitor_system.py  reset_migrations.py
src/core/migrations/: 0001_initial.py
src/core/templatetags/: partial_components.py
src/feeds/: admin.py  delivery.py  forms.py  generators.py  models.py  urls.py  views.py
src/feeds/management/commands/: generate_feeds.py
src/feeds/migrations/: 0001_initial.py
src/products/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/products/migrations/: 0001_initial.py
src/solidus/: asgi.py  db_router.py  settings.py  urls.py  wsgi.py
src/utils/: jvm.py
static/css/: layout.css
templates/: base.html
templates/accounts/: create.html  customer_detail.html  detail.html  edit.html  list.html  login.html  password_change.html  profile_edit.html  settings.html  user_list.html
templates/assets/: browse.html  collection_detail.html  collections.html  create.html  detail.html  edit.html  list.html  upload.html
templates/assets/partials/: upload_progress.html
templates/audit/: log_detail.html  log_list.html  model_history.html  reports.html
templates/audit/partials/: version_comparison.html  version_detail.html
templates/autocare/management/commands/: migrate_from_mysql.py
templates/autocare/pcadb/: attribute_list.html  base.html  category_list.html  change_detail.html  change_log.html  home.html  part_detail.html  part_form.html  part_list.html
templates/autocare/pcadb/partials/: part_search_result.html  subcategory_options.html
templates/autocare_pcadb/: attribute_list.html  category_list.html  change_detail.html  change_log.html  home.html  part_detail.html  part_form.html  part_list.html
templates/autocare_vcdb/: advanced_search.html  base.html  base_vehicle_list.html  dashboard.html  engine_config_list.html  stats.html  vehicle_comparison.html  vehicle_detail.html  vehicle_form.html  vehicle_list.html
templates/autocare_vcdb/htmx/: model_options.html  vehicle_search_results.html
templates/autocare_vcdb/tags/: vehicle_card.html
templates/core/: dashboard.html  search.html  settings_update.html  system_settings.html  task_list.html
templates/core/partials/: notification_dropdown.html  task_detail.html  task_list.html
templates/errors/: 403.html  404.html  500.html
templates/feeds/: create.html  detail.html  edit.html  generation_detail.html  generations.html  list.html  my_feeds.html
templates/feeds/email/: feed_ready.html  feed_ready.txt
templates/partials/: asset_card.html  breadcrumbs.html  pagination.html  product_card.html
templates/partials/base/: admin_menu.html  customer_menu.html  employee_menu.html  header.html  messages.html  meta.html  navigation.html
templates/partials/content/: bulk_actions.html  empty_state.html  list_header.html  search_filter.html  stats_cards.html  timeline.html  view_toggle.html
templates/partials/feeds/: feed_card.html  generation_status.html
templates/partials/forms/: field.html  file_input.html  form_actions.html  multiple_file_input.html  tags_input.html
templates/partials/media/: asset_card.html  asset_list_item.html  file_icon.html  image_preview.html  video_preview.html
templates/partials/modals/: confirm_delete.html  share_asset.html
templates/partials/products/: product_card.html  product_list_item.html
templates/partials/status/: badge.html  task_status.html  user_status.html
templates/partials/ui/: accordion.html  button.html  button_classes.html  card.html  dropdown.html  loading_spinner.html  modal.html  progress_bar.html  tabs.html
templates/partials/users/: role_badge.html  user_avatar.html  user_card.html  user_info.html
templates/products/: assets.html  catalog.html  create.html  detail.html  edit.html  list.html
templates/products/partials/: product_list.html  quick_edit_form.html  status_badge.html
