[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "solidus"
version = "0.1.0"
description = "Solidus Platform for CMS/Data Management"
requires-python = ">=3.12"

dependencies = [
  # Core Framework
  "django==5.0.1",
  "channels==4.0.0",
  "channels-redis==4.1.0",
  "daphne==4.0.0",

  # Django Enhancements
  "django-extensions==3.2.3",
  "django-widget-tweaks==1.5.0",
  "django-cleanup==8.0.0",
  "django-htmx==1.17.2",
  "django-taggit==5.0.1",
  "django-cors-headers==4.3.1",
  "django-csp==3.7",
  "django-redis==5.4.0",
  "djangorestframework==3.14.0",
  "django-filter==23.5",
  "django-celery-beat>=2.5.0",

  # Core Libraries
  "psycopg[binary]==3.1.16",
  "pillow==10.2.0",
  "paramiko==3.4.0",
  "requests==2.31.0",
  "redis==5.0.1",
  "xlsxwriter==3.1.9",
  "celery>=5.3.5",
  "python-decouple==3.8",
  "whitenoise==6.6.0",
  "gunicorn==21.2.0",
  "sentry-sdk==1.39.1"
]

[project.optional-dependencies]
dev = [
  "ipython==8.19.0",
  "django-debug-toolbar==4.2.0",
  "black==23.12.1",
  "flake8==7.0.0",
  "isort==5.13.2",
  "mypy==1.8.0",
  "django-stubs==4.2.7"
]

test = [
  "pytest==7.4.4",
  "pytest-django==4.7.0",
  "pytest-cov==4.1.0",
  "factory-boy==3.3.0"
]

docs = [
  "mkdocs==1.5.3",
  "mkdocs-material==9.5.3"
]

[tool.setuptools.packages.find]
where = ["src"]